Initial solution that doesn't reach 1000 score